--- a/src/app4.css
+++ b/src/app4.css
@@ -8,8 +8,8 @@
   }
   #app4 .circle {
     margin: 20px;
-    width: 25vw;
-    height: 25vw;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     border: 1px solid red;
   }
